--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://anderspollack.github.io/portfolio",
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4"
   },
-    "scripts": {
-	"start": "react-scripts start",
-	"build": "react-scripts build",
-	"test": "react-scripts test --env=jsdom",
-	"eject": "react-scripts eject",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
