--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "anderspollack.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://anderspollack.github.io/portfolio",
+  "homepage": "http://anderspollack.github.io",
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "^16.4.0",
@@ -16,7 +16,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
