--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anderspollack.github.io",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://anderspollack.github.io",
@@ -7,8 +7,10 @@
     "classnames": "^2.2.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-media": "^1.8.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
