--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://anderspollack.github.io",
+  "homepage": "http://anderspollack.github.io/portfolio2018",
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-media": "^1.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "react-scroll": "^1.7.10",
-    "react-transition-group": "^2.4.0"
+    "react-scripts": "^3.0.1",
+    "react-scroll": "^1.7.11",
+    "react-transition-group": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,9 +19,21 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
