--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://anderspollack.github.io/portfolio2018",
+  "homepage": "https://portfolio2018.anderspollack.com",
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.8.6",
@@ -10,7 +10,7 @@
     "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
-    "react-scroll": "^1.7.11",
+    "react-scroll": "^1.7.12",
     "react-transition-group": "^2.9.0"
   },
   "scripts": {
